# ai

skills/sql-query-assistant/: SKILL.md
skills/sql-query-assistant/reference/: enums.md  finding-references.md
skills/sql-query-assistant/reference/examples/: measuring-form-template.md  measuring-template-details.md  part-details-with-units.md  part-details.md  part-units.md
sqlanywhere-mcp/: .env.example  .gitignore  README.md  pyproject.toml
sqlanywhere-mcp/sqlanywhere_mcp/: __init__.py  db.py  errors.py  formatters.py  models.py  queries.py  schema.py  server.py
